# my-compositor

./: CMakeLists.txt
include/: compositor.hpp  wlr_scene_wrapper.hpp  wlroots_headers.hpp
src/: main.cpp
